[gd_scene load_steps=10 format=3 uid="uid://6aorvierp5yd"]

[ext_resource type="Script" uid="uid://dwheyx4anye7l" path="res://mob.gd" id="1_1qmh0"]
[ext_resource type="Texture2D" uid="uid://bkpgsynnfkwoj" path="res://art/enemyFlyingAlt_1.png" id="1_b3mxk"]
[ext_resource type="Texture2D" uid="uid://doeljr6u1s3ji" path="res://art/enemyFlyingAlt_2.png" id="2_1qmh0"]
[ext_resource type="Texture2D" uid="uid://v7l83ivl13ly" path="res://art/enemySwimming_1.png" id="3_gfurk"]
[ext_resource type="Texture2D" uid="uid://ccffaf1ejtge7" path="res://art/enemySwimming_2.png" id="4_ieysi"]
[ext_resource type="Texture2D" uid="uid://mojhosjonoun" path="res://art/enemyWalking_1.png" id="5_cixyi"]
[ext_resource type="Texture2D" uid="uid://tvadf04ghukn" path="res://art/enemyWalking_2.png" id="6_7ulmv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pcqmr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_b3mxk")
}, {
"duration": 1.0,
"texture": ExtResource("2_1qmh0")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gfurk")
}, {
"duration": 1.0,
"texture": ExtResource("4_ieysi")
}],
"loop": true,
"name": &"swim",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_cixyi")
}, {
"duration": 1.0,
"texture": ExtResource("6_7ulmv")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b3mxk"]
radius = 33.0
height = 90.0

[node name="Mob" type="RigidBody2D" groups=["mobs"]]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_1qmh0")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_pcqmr")
animation = &"swim"
frame_progress = 0.5224873

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_b3mxk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ChangeDirectionTimer" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="change_direction"]
